[package]
name = "tanks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Remember to revert this before releasing your game! Otherwise you will need to include libbevy_dylib alongside your game if you want it to run
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.21.0", features = ["debug-render-2d"] }
bevy-inspector-egui = "0.18"
# out of date
# bevy-inspector-egui-rapier = { version = "0.9", features = ["rapier2d"] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
